fix: overflow hidden to horizontal scroll

--- a/src/components/horizontalScroll/HorizontalScroll.css
+++ b/src/components/horizontalScroll/HorizontalScroll.css
@@ -1,3 +1,8 @@
+.hs-view {
+  width: 100%;
+  overflow: hidden;
+}
+
 .hs-container {
   margin-left: 150px;
   margin-bottom: 150px;
